tidy up spacing in main js file, fix spacing of close buttons on view, rename data variable to gifdata in the pitbull image call for clarification purposes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,7 @@
   color: black;
   transform: translateX(-50%);
   z-index: 6;
+  text-align: center;
 }
 
 #imageframe{
